<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_web_site">Web version</string>
    <string name="action_send">Submit</string>
    
    <!-- General -->
    <string name="app_name">linger</string>
    <string name="title_activity_landing">Linger</string>
    <string name="logo_description">The Linger Leaf</string>

    <!-- Landing fragment -->
	<string name="sync">sync</string>
    
    <!-- Login/landing activity -->
    <string name="elevator_speech">Access your contacts and messages from any device, 
        even if your phone is dead.</string>
    <string name="login_indicator">login</string>
    <string name="registration_indicator">register</string>
    <string name="name_field">your name</string>
    <string name="email_field">email address</string>
    <string name="phone_number_field">phone number</string>
    <string name="password_field">password</string>
    <string name="submit_fields">submit</string>

    <!-- Registration fragment -->
    <string name="registration_prompt">Registration</string>
    
    <!-- About page -->
    <string name="title_activity_about">About Linger</string>
	<string name="about_a">Linger backs up your contact list 
	    and messages so you can view them on any device.</string>
	<string name="about_b">Contacts and messages are backed up
	    when your phone battery drops to a critically low level.</string>
	<string name="about_c">Access <a href="http://linger.io">linger.io</a> 
	    from any phone or computer.</string>
	<string name="about_d">Access your contacts and messages from 
	    anyone\'s phone.</string>
	<string name="founders"></string>
</resources>
