<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

	<TextView
	    android:id="@+id/title_label"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		style="@style/Title"
		android:layout_centerHorizontal="true"
	    android:text="@string/app_name"
	/>
	
	<TextView
	    android:id="@+id/description_label_a"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/title_label"
		android:layout_marginTop="10dp"
		style="@style/SwipeIndicators"
	    android:text="@string/about_a"
	/>

	<TextView
	    android:id="@+id/description_label_b"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/description_label_a"
		android:layout_marginTop="10dp"
		style="@style/SwipeIndicators"
	    android:text="@string/about_b"
	/>
	
	<TextView
	    android:id="@+id/description_label_c"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/description_label_b"
		android:layout_marginTop="10dp"
		style="@style/SwipeIndicators"
	    android:text="@string/about_c"
	/>
	
	<TextView
	    android:id="@+id/description_label_d"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/description_label_c"
		android:layout_marginTop="10dp"
		style="@style/SwipeIndicators"
	    android:text="@string/about_d"
	/>
	
	<TextView
	    android:id="@+id/founders_label"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/description_label_d"
		android:layout_marginTop="10dp"
		style="@style/SwipeIndicators"
	    android:text="@string/founders"
	/>
</RelativeLayout>
