<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LandingActivity$DummySectionFragment" >

	<LinearLayout
	    android:id="@+id/button_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:gravity="center"
		android:layout_centerVertical="true"
	>		
	    
		<TextView
	        android:id="@+id/section_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/title_text"
	        android:text="@string/registration_prompt"
	    />
		
		<!-- Input name field -->
		<EditText
		    android:id="@+id/nameTextLogin"
			android:layout_marginTop="5dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textCapCharacters" 
		    style="@style/hint"
	        android:hint="@string/name_field"
	    >
		<requestFocus />
		</EditText>
		
		<!-- Input phone number field -->
		<EditText
		    android:id="@+id/phoneTextLogin"
			android:layout_marginTop="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="phone" 
		    style="@style/hint"
	        android:hint="@string/phone_number_field"
	    >
		<requestFocus />
		</EditText>
		
		<!-- Input email field -->
		<EditText
		    android:id="@+id/emailTextLogin"
			android:layout_marginTop="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textEmailAddress" 
		    style="@style/hint"
	        android:hint="@string/email_field"
	    >
		<requestFocus />
		</EditText>
	
		    <!--  Password field -->
		<EditText
			android:id="@+id/passEditTextLogin"
			android:layout_marginTop="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="textPassword" 
		    style="@style/hint"
		    android:hint="@string/password_field"
		>
		<requestFocus />
		</EditText>
	</LinearLayout>
    
	<Button
	    android:id="@+id/button_submit_login"
	    android:layout_marginTop="10dp"
    	android:layout_height="wrap_content"
    	android:layout_width="match_parent"
    	android:layout_alignParentBottom="true"
    	android:text="@string/submit_fields"
    	style="@style/BlueButton"
    />
</RelativeLayout>