<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >	

    <!-- text field for registration functionality: name -->
	<EditText
		android:layout_marginTop="50dp"
		android:id="@+id/nameTextRegistration"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="phone" 
		style="@style/hint"
	    android:hint="@string/name_field"
	>
	<requestFocus />
	</EditText>
	
	<!-- text field for registration functionality: email -->
	<EditText
		android:id="@+id/emailTextRegistration"
		android:layout_marginTop="10dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="phone"
		style="@style/hint"
	    android:hint="@string/email_field"
	    android:layout_below="@id/nameTextRegistration"
	>
	<requestFocus />
	</EditText>
    		
	<!-- text field for registration functionality: phone number -->
	<EditText
		android:id="@+id/phoneTextLogin"
		android:layout_marginTop="10dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="phone" 
		style="@style/hint"
	    android:hint="@string/phone_number_field"
	    android:layout_below="@id/emailTextRegistration"
	>
	<requestFocus />
	</EditText>
	
	<!-- text field for registration functionality: password -->
	<EditText
		android:id="@+id/passEditTextLogin"
		android:layout_marginTop="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword" 
		style="@style/hint"
		android:hint="@string/password_field"
		android:layout_below="@id/phoneTextLogin"
	/>
    
	<TextView
	    android:id="@+id/login_link"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    style="@style/footer"
	    android:text="@string/login_indicator"
	    android:onClick="toLogin"
	/>
</RelativeLayout>