<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:screenOrientation="portrait"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LandingActivity$DummySectionFragment" >
    
    <Button
		android:id="@+id/register_swipe_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		style="@style/SwipeIndicators"
		android:background="@android:color/transparent"
		android:text="@string/registration_indicator"
	/> 
	
   	<Button
		android:id="@+id/login_swipe_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="0dp"
		style="@style/SwipeIndicators"
		android:background="@android:color/transparent"
		android:text="@string/login_indicator"
	/>

	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		android:layout_centerVertical="true"
		android:orientation="vertical"
	>
		<ImageView
		  	android:id="@+id/logo_image"
		  	android:layout_width="match_parent"
		  	android:layout_height="wrap_content"
		  	android:adjustViewBounds="true"
	       	android:contentDescription="@string/logo_description"
	       	android:src="@drawable/large_logo_with_text" 
		/>
			    
		<Button
			android:id="@+id/button_sync"
			android:layout_marginTop="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/BlueButton"
			android:text="@string/sync"
		/>
		
		<TextView
		    android:id="@+id/last_sync_date_label"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/BodyText"
		/>
		
		
	</LinearLayout>
	
</RelativeLayout>