<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LandingActivity$DummySectionFragment" >

    <TextView
		android:id="@+id/login_swipe_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		style="@style/SwipeIndicators"
		android:text="@string/login_prompt"
	/>
    
    <TextView
		android:id="@+id/register_swipe_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		style="@style/SwipeIndicators"
		android:text="@string/registration_prompt"
	/>
    
	<LinearLayout
	    android:id="@+id/button_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_centerVertical="true"
	>    

			<TextView
			    android:id="@+id/title_label"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/Title"
				android:layout_centerHorizontal="true"
				android:layout_centerVertical="true"
			    android:text="@string/app_name"
			/>
		    
		    <Button
		        android:id="@+id/button_test"
		        android:layout_marginTop="10dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/title_label"
		        style="@style/BlueButton"
		        android:layout_centerVertical="true"
		        android:text="@string/sync" />
    
    </LinearLayout>

</RelativeLayout>